# MacMorning-BE

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose-local.yml  docker-compose.yml
ai/: Dockerfile.dev  Dockerfile.local  README.md  main.py  pyproject.toml
ai/ai/: story_ai.py
ai/core/: db_config.py
ai/db/: database.py  models.py
ingq/: .dockerignore  Dockerfile.dev  Dockerfile.local  alembic.ini  main.py  pyproject.toml
ingq/app/: macmorning.py
ingq/auth/application/: auth_service.py  auth_token_service.py  jwt_token_provider.py
ingq/auth/dto/: schemas.py
ingq/auth/exception/: auth_exceptions.py
ingq/auth/utils/: mapper.py  user_extractor.py
ingq/book/application/: book_service.py
ingq/book/domain/: book.py  character.py
ingq/book/dto/: schemas.py
ingq/book/exception/: book_exception.py
ingq/book/utils/: mapper.py
ingq/bookmark/application/: bookmark_service.py
ingq/bookmark/domain/: bookmark.py
ingq/bookmark/dto/: schemas.py
ingq/bookmark/exception/: bookmark_exception.py
ingq/choice/application/: choice_service.py
ingq/choice/domain/: choice.py
ingq/choice/dto/: schemas.py
ingq/choice/utils/: mapper.py
ingq/config/: cors_config.py  db_config.py  redis_config.py
ingq/core/: auth_middleware.py  cors_config.py  db_config.py  openapi.py  redis_config.py
ingq/core/exception/: custom_exception.py  error_handler.py  error_response.py
ingq/core/response/: api_response_wrapper.py  (+1 more)
ingq/db/: database.py  models.py  redis_cache.py
ingq/dependencies/: containers.py
ingq/migration/: env.py
ingq/migrations/: env.py
ingq/utils/: logging.py
(+65 files in other folders)
