[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.12",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]
