[project]
name = "ingq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.1",
    "cryptography>=44.0.2",
    "fastapi>=0.115.11",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "uvicorn[standard]>=0.34.0",
]
